Fix JS and CSS errors to solve IE11 code editor visibility bugs

--- a/sass/px-demo-code-editor.scss
+++ b/sass/px-demo-code-editor.scss
@@ -56,7 +56,7 @@ $inuit-enable-btn--small : true;
   }
 }
 :host([enabled]) {
-  display: initial;
+  display: inherit;
   visibility: visible;
 
   px-code-editor {
